# solstice

./: .buildinfo  .gitignore  .pylintrc  .travis.yml  404.html  LICENSE.txt  MANIFEST.in  README.md  README.rst  deployer.bat  deployer.py  genindex.html  index.html  launcher.bat  launcher.py  mkdocs.yml  modules.html  objects.inv  py-modindex.html  requirements.txt  requirements_git.txt  search.html  searchindex.js  setup.cfg  setup.json  setup.py  sitemap.xml  solstice.assets.backgroundelement.html  solstice.assets.character.html  solstice.assets.html  solstice.assets.prop.html  solstice.assets.set.html  solstice.core.asset.html  solstice.core.assetfile.html  solstice.core.assetsviewer.html  solstice.core.defines.html  solstice.core.html  solstice.core.node.html  solstice.core.project.html  solstice.core.sequence.html  (+36 more)
_sources/: modules.rst.txt  solstice.assets.backgroundelement.rst.txt  solstice.assets.character.rst.txt  solstice.assets.prop.rst.txt  solstice.assets.rst.txt  solstice.assets.set.rst.txt  solstice.core.asset.rst.txt  solstice.core.assetfile.rst.txt  solstice.core.assetsviewer.rst.txt  solstice.core.defines.rst.txt  solstice.core.node.rst.txt  solstice.core.project.rst.txt  solstice.core.rst.txt  solstice.core.sequence.rst.txt  solstice.core.shelf.rst.txt  solstice.core.shot.rst.txt  solstice.core.tag.rst.txt  solstice.core.tool.rst.txt  solstice.core.tray.rst.txt  solstice.core.utils.rst.txt  solstice.files.alembic.rst.txt  solstice.files.groom.rst.txt  solstice.files.lightrig.rst.txt  solstice.files.masterlayout.rst.txt  solstice.files.model.rst.txt  solstice.files.rig.rst.txt  solstice.files.rst.txt  solstice.files.shader.rst.txt  solstice.files.shading.rst.txt  solstice.files.shotlayout.rst.txt  solstice.files.standin.rst.txt  solstice.files.texture.rst.txt  solstice.loader.rst.txt  solstice.managers.media.rst.txt  solstice.managers.menu.rst.txt  solstice.managers.rst.txt  solstice.register.rst.txt  solstice.rst.txt  solstice.tagger.editors.highproxyeditor.rst.txt  solstice.tagger.editors.rst.txt  (+6 more)
about/: index.html
dev/: dev_requirements.txt  solstice_dev.py  win_dev_setup.bat
docs/: Makefile  conf.py  index.rst  make.bat  mkdocs.yml  nda.md  setup.cfg
launcher/: solstice_artella_utils.py  solstice_config.py  solstice_houdini_utils.py  solstice_launcher.pyw  solstice_logger.py  solstice_updater.py
modules/: solstice_pipeline.mod  solstice_tools.mod
nda/: index.html
scripts/: config.json  generate_launcher.py  generate_spec.py  launcher.py  launcher_dev.py  requirements.txt  setup_dev_env.py  userSetup.py
slack/: index.html
(+746 files in other folders)
