[metadata]
name = solstice
description = Core implementation for ArtellaPipe based Solstice Pipeline
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: solstice.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/Solstice-Short-Film/solstice

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    python-json-logger
    tpPyUtils
    tpDccLib
    artellapipe
    sentry-sdk
    tpPyUtils
    tpDccLib
    tpQtLib
    tpMayaLib
    tpHoudiniLib

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1