[metadata]
name = solstice
description = Core implementation for ArtellaPipe based Solstice Pipeline
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/Solstice-Short-Film/solstice

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    python-json-logger
    sentry-sdk
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt
    tpDcc-dccs-maya
;    tpDcc-dccs-houdini
    artellapipe
    artellapipe-libs-ffmpeg
    artellapipe-tools-tagger

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = solstice/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =